--- a/package.json
+++ b/package.json
@@ -25,30 +25,37 @@
     "@capgo/capacitor-native-biometric": "^8.0.3",
     "@react-spring/web": "^10.0.3",
     "@web3auth/modal": "^10.10.0",
-    "clsx": "^2.1.1",
+    "mobx": "^6.15.0",
+    "mobx-react-lite": "^4.1.1",
+    "motion": "^12.23.26",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0",
-    "tailwind-merge": "^3.4.0",
-    "tronweb": "^6.1.1",
-    "vite-plugin-node-polyfills": "^0.24.0"
+    "tronweb": "^6.1.1"
   },
   "devDependencies": {
     "@capacitor/android": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@eslint/js": "^9.39.2",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/chroma-js": "^3.1.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
+    "chroma-js": "^3.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.26",
     "globals": "^16.5.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.1",
     "vite": "^6.4.1",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^4.0.16"
   }
 }
