--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,6 @@
       "shared/*": ["src/shared/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/shared/ui/animated/inspira-ui"]
 }
