--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
     "@capacitor/status-bar": "^8.0.0",
     "@capgo/capacitor-native-biometric": "^8.0.3",
     "@react-spring/web": "^10.0.3",
+    "@reown/appkit": "^1.8.15",
+    "@reown/appkit-adapter-ethers": "^1.8.15",
+    "@reown/appkit-wallet-button": "^1.8.15",
     "@use-gesture/react": "^10.3.1",
-    "@web3auth/modal": "^10.10.0",
+    "@web3auth/default-evm-adapter": "^9.7.0",
+    "@web3auth/ethereum-provider": "^9.7.0",
+    "@web3auth/no-modal": "^10.10.0",
+    "ethers": "^6.16.0",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
     "motion": "^12.23.26",
